sfdx-source/force-app/main/default/objects/Business_Friendly_Mapping__mdt/Business_Friendly_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Created this Custom meta data for transforming the Integration related error messages to the business friendly error message.</description>
    <label>Business Friendly Mapping</label>
    <pluralLabel>Business Friendly Mappings</pluralLabel>
</CustomObject>