sfdx-source/force-app/main/default/objects/Business_Friendly_Mapping__mdt/fields/Business_Friendly_Message__c.field-meta.xml
<CustomField>
    <fullName>Business_Friendly_Message__c</fullName>
    <label>Business Friendly Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>