sfdx-source/force-app/main/default/objects/Business_Friendly_Mapping__mdt/fields/Integration_Key_String__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key_String__c</fullName>
    <label>Integration Key String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>