sfdx-source/force-app/main/default/objects/Business_Friendly_Mapping__mdt/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Xref Provisioning</fullName>
                <default>true</default>
                <label>Xref Provisioning</label>
            </value>
            <value>
                <fullName>Test Type</fullName>
            </value>
            <value>
                <fullName>Business Reference Provisioning</fullName>
            </value>
            <value>
                <fullName>Tablet Case Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>