sfdx-source/force-app/main/default/objects/Business_Friendly_Mapping__mdt/fields/Message_Category__c.field-meta.xml
<CustomField>
    <fullName>Message_Category__c</fullName>
    <label>Message Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking Validations</fullName>
                <default>true</default>
                <label>Banking Validations</label>
            </value>
            <value>
                <fullName>Test Category</fullName>
            </value>
            <value>
                <fullName>Services Missing</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
            <value>
                <fullName>Decision Maker Or Store Duplicate</fullName>
            </value>
            <value>
                <fullName>Invalid Data - Phone Number</fullName>
            </value>
            <value>
                <fullName>Missing Data - Currency</fullName>
            </value>
            <value>
                <fullName>Missing Data - TaxId</fullName>
            </value>
            <value>
                <fullName>Missing Data - Billing Contact Name</fullName>
            </value>
            <value>
                <fullName>Missing Data - Decision Maker</fullName>
            </value>
            <value>
                <fullName>Invalid Data - Entity Type</fullName>
            </value>
            <value>
                <fullName>Invalid Data - Routing Number</fullName>
            </value>
            <value>
                <fullName>Invalid Data - Transit Number</fullName>
            </value>
            <value>
                <fullName>Invalid Data - Account Number</fullName>
            </value>
            <value>
                <fullName>Invalid COO</fullName>
            </value>
            <value>
                <fullName>Geo Coverage Issue</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>POS - Duplicate</fullName>
            </value>
            <value>
                <fullName>Global Do Not Activate</fullName>
            </value>
            <value>
                <fullName>Invalid Data - Postal Code</fullName>
            </value>
            <value>
                <fullName>FullSend Create</fullName>
            </value>
            <value>
                <fullName>Amendment &amp; Bulk</fullName>
            </value>
            <value>
                <fullName>Invalid Data - Tax Strategy</fullName>
            </value>
            <value>
                <fullName>Error - Create Tax Strategy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>