sfdx-source/force-app/main/default/objects/Business_Friendly_Mapping__mdt/listViews/All_Fields_View.listView-meta.xml
<ListView>
    <fullName>All_Fields_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Integration_Key_String__c</columns>
    <columns>Business_Friendly_Message__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Message_Category__c</columns>
    <columns>Order__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields View</label>
</ListView>